# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Malte Luken
author_email = m.luken@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = Extract emotion expression-related voice features from audio.
keywords =
    voice
    emotion
    feature
long_description = file: README.md
long_description_content_type = text/markdown
name = emvoice
project_urls =
    Bug Tracker = https://github.com/mexca/emvoice/issues
url = https://github.com/mexca/emvoice
version = 0.1.0

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    librosa<0.10.0
    numpy
    scipy
    scikit-learn

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    black
    bump2version
    prospector[with_pyroma]
    pre-commit
    pylint==2.15.6
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = emvoice, emvoice.*

[isort]
profile = black
known_first_party = emvoice
src_paths = emvoice,tests
line_length = 80
multi_line_output = 3
